Update project structure and configuration files
- Add post-create script for development container setup
- Update .gitignore to include share/python-wheels/
- Modify LICENSE file for consistency
- Adjust dev_requirements.txt for clarity
- Rename pre-commit configuration file for consistency
- Update publish workflow for better readability
- Refactor setup.py for improved formatting
- Enhance PackageStructure class docstrings for clarity

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,12 +6,18 @@
         "vscode": {
             "extensions": [
                 "ms-python.python",
-                "ms-python.vscode-pylance"
+                "ms-python.vscode-pylance",
+                "mhutchie.git-graph",
+                "eamodio.gitlens",
+                "GitHub.copilot-chat",
+                "GitHub.copilot"
             ]
-        }      
+        }
     },
     "forwardPorts": [],
-    "postCreateCommand": "pip install -r dev_requirements.txt",
+    "postStartCommand": "git config --global --add safe.directory ${containerWorkspaceFolder}",
+	"runArgs": ["--env-file",".devcontainer/devcontainer.env"],
+	"postCreateCommand": "sh .devcontainer/post-create.sh ${containerWorkspaceFolder}",
     "features": {
         "ghcr.io/devcontainers/features/docker-in-docker:2": {
             "moby": true,
