Add GitHub Actions extension and ensure proper YAML formatting in workflows

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,8 @@
                 "mhutchie.git-graph",
                 "eamodio.gitlens",
                 "GitHub.copilot-chat",
-                "GitHub.copilot"
+                "GitHub.copilot",
+                "github.vscode-github-actions"
             ]
         }
     },
