--- a/sample_package/.devcontainer/devcontainer.json
+++ b/sample_package/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sample_package",
+    "name": "sample_package_py",
     "dockerFile": "Dockerfile",
     "context": "..",
     "customizations": {
