--- a/pkg_wizard/content/github_actions/publish.yml
+++ b/pkg_wizard/content/github_actions/publish.yml
@@ -1,4 +1,4 @@
-content = """name: Publish Python Package
+name: Publish Python Package
 
 on:
 push:
@@ -30,6 +30,3 @@ build:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
         password: ${{ secrets.PYPI_API_TOKEN }}
-"""
-
-file_name = "publish.yml"
