--- a/pkg_wizard/content/devcontaier/.devcontainer.json
+++ b/pkg_wizard/content/devcontaier/.devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "smart_py",
+    "name": "<package_name>",
     "dockerFile": "Dockerfile",
     "context": "..",
     "customizations": {
@@ -11,7 +11,10 @@
                 "eamodio.gitlens",
                 "GitHub.copilot-chat",
                 "GitHub.copilot",
-                "github.vscode-github-actions"
+                "github.vscode-github-actions",
+                "codezombiech.gitignore",
+                "VisualStudioExptTeam.vscodeintellicode",
+                "VisualStudioExptTeam.intellicode-api-usage-examples"
             ]
         }
     },
