--- a/pkg_wizard/content/devcontainer/devcontainer.json
+++ b/pkg_wizard/content/devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "<package_name>",
+    "name": "{{package_name}}",
     "dockerFile": "Dockerfile",
     "context": "..",
     "customizations": {
