refactor devcontainer configuration to use build property for dockerfile

--- a/pkg_wizard/content/devcontainer/devcontainer.json
+++ b/pkg_wizard/content/devcontainer/devcontainer.json
@@ -1,7 +1,8 @@
 {
     "name": "{{package_name}}",
-    "dockerFile": "Dockerfile",
-    "context": "..",
+    "build": {
+        "dockerfile": "../Dockerfile"
+    },
     "customizations": {
         "vscode": {
             "extensions": [
